--- a/index.html
+++ b/index.html
@@ -25,6 +25,14 @@
         </p>
       </div>
     </div>
-
+    <div class="subscribe">
+      <h3>Subscribe</h3>
+    <form action = "url_here">
+      <p class="subscribe">For more information and updates, join our mailing list!
+        <br>
+      Email Address: <input type="text" name="email" size="20">
+      <input type="submit" name="subscribe" value="Subscribe" size="20">
+    </p>
+    </div>
     </body>
   </html>
