--- a/kitchen_essentials.html
+++ b/kitchen_essentials.html
@@ -15,8 +15,10 @@
     <div class="main">
       <div class="clearfix">
         <h2>What do we <i>really</i> need?</h2>
-          <p>In order to cook anything, you need tools with which to cook.  I am not a huge fan of single purpose tools in the kitchen.  Unless you use them often, they take up space and are a waste of money.  Often people will buy fancy, fun appliances and tools that seem like a good idea at the time. <i>I'll use this all the time!</i>  The reality is, that spiralizer you got yourself for your lonely 28<sup>th</sup> birthday will get use maybe twice a month.  Same goes for your juicer or that knock off Sous Vide.  Don't get me wrong, If these are tools that will see use once or more per week then go crazy!  But if you are anything like me, that ice cream maker will make a great shelf in the garage for all your other regrettable purchases.  Below I have compiled a list of basic tools and equipment to get you started:
-
+          <p>In order to cook anything, you need tools with which to cook.  I am not a huge fan of single purpose tools in the kitchen.  Unless you use them often, they take up space and are a waste of money.  Often people will buy fancy, fun appliances and tools that seem like a good idea at the time. <i>I'll use this all the time!</i>  The reality is, that spiralizer you got yourself for your lonely 28<sup>th</sup> birthday will get used maybe twice a month.  Same goes for your juicer or that knock off Sous Vide.  Don't get me wrong, If these are tools that will see use once or more per week then go crazy!  But if you are anything like me, that ice cream maker will make a great shelf in the garage for all your other regrettable purchases.  Below I have compiled a list of basic tools and equipment to get you started:
+            <br>
+            <img src="https://m.media-amazon.com/images/I/81BmS0FdJjL._AC_UL320_ML3_.jpg">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRBs3wsmXr1ng7Lx1u83OG8Ofo_X5nbI_CrmTfvgpjBLSAouRbP&s">
             <ul>
               <li>Oven</li>
               <li>Stove</li>
@@ -31,6 +33,15 @@
           <br>
           It is very important to know your equipment and the only way to do this is by practicing.  Different ovens and stove ranges have a lot of variables that can affect performance.  An induction stove will distribute heat evenly where a gas range might heat unevenly.  A cast iron pan will hold heat longer than an aluminum pan.  There is no need to buy top of the line equipment if you are just starting out.  Let's be honest, you probably mess it up anyway and now your $200 non-stick pan is a $200 stick-to-everything pan.  That being said, the one tool I would invest in is a good knife.  Which brings us to our next section...it's knives.  Click on the link in the sidebar called "Knives".
           </p>
+      </div>
+      <div class="subscribe">
+        <h3>Subscribe</h3>
+      <form action = "url_here">
+        <p class="subscribe">For more information and updates, join our mailing list!
+          <br>
+        Email Address: <input type="text" name="email" size="20">
+        <input type="submit" name="subscribe" value="Subscribe" size="20">
+      </p>
       </div>
     </div>
 
