--- a/index.html
+++ b/index.html
@@ -4,35 +4,35 @@
     <link href="style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
-    <header>Meat Snacks</header>
+    <header>Meat Snacks - Home</header>
     <div class= "nav">
-    <ul>
-      <li><a href = "index.html">Home</a></li>
-      <li><a href = "kitchen_essentials.html">Kitchen Essentials</a></li>
-      <li><a href = "knives.html">Knives</a></li>
-    </ul>
+      <ul>
+        <li><a href = "index.html">Home</a></li>
+        <li><a href = "kitchen_essentials.html">Kitchen Essentials</a></li>
+        <li><a href = "knives.html">Knives</a></li>
+      </ul>
     </div>
     <div class="main">
       <div class="clearfix">
         <h2>Welcome</h2>
-          <p><img src= "https://cdn.apartmenttherapy.info/image/fetch/f_auto,q_auto:eco,c_fit,w_1260/https%3A%2F%2Fstorage.googleapis.com%2Fgen-atmedia%2F3%2F2017%2F02%2F2816f86937ebc7019a513d858cec8e0c55d38890.jpeg"> Greetings and welcome!  Here at Meat Snacks we are excited to teach you about cooking great food.  From grilling and smoking, to searing and braising, we've got you covered.  We are a protein-heavy cooking site.  Enjoying good proteins requires the taking of a life and we want to respect that by showing you how to utilize every part of an animal.
-          <br>
-          <br>
-          On this site, you'll find info on kitchen equipment, butchery practices, recipes and more!  We don't care if you are a master chef, never cooked a meal in your life, or eat somewhere in between.  Being able to cook is an essential part of everyday life that everyone should be comfortable with.  If you can cook, you'll never be hungry.  Join us on this culinary journey.
-          <br>
-          <br>
-          Knives up!
+        <p><img src= "https://cdn.apartmenttherapy.info/image/fetch/f_auto,q_auto:eco,c_fit,w_1260/https%3A%2F%2Fstorage.googleapis.com%2Fgen-atmedia%2F3%2F2017%2F02%2F2816f86937ebc7019a513d858cec8e0c55d38890.jpeg"> Greetings and welcome!  Here at Meat Snacks we are excited to teach you about cooking great food.  From grilling and smoking, to searing and braising, we've got you covered.  We are a protein-heavy cooking site.  Enjoying good proteins requires the taking of a life and we want to respect that by showing you how to utilize every part of an animal.
+        <br>
+        <br>
+        On this site, you'll find info on kitchen equipment, butchery practices, recipes and more!  We don't care if you are a master chef, never cooked a meal in your life, or eat somewhere in between.  Being able to cook is an essential part of everyday life that everyone should be comfortable with.  If you can cook, you'll never be hungry.  Join us on this culinary journey.
+        <br>
+        <br>
+        Knives up!
         </p>
       </div>
     </div>
     <div class="subscribe">
       <h3>Subscribe</h3>
-    <form action = "url_here">
+      <form action = "url_here">
       <p class="subscribe">For more information and updates, join our mailing list!
         <br>
-      Email Address: <input type="text" name="email" size="20">
-      <input type="submit" name="subscribe" value="Subscribe" size="20">
-    </p>
+        Email Address: <input type="text" name="email" size="20">
+        <input type="submit" name="subscribe" value="Subscribe" size="20">
+      </p>
     </div>
-    </body>
-  </html>
+  </body>
+</html>
